# basic-poetry2nix

./: LICENSE  README.md  flake.nix  pyproject.toml
